# bonsai-agent

./: .gitignore  .prefix_baseline  ARCHITECTURE.md  PHILOSOPHY.md  README.md  README_en.md  ROADMAP.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
assets/: BRAND.md  app.html
assets/chrome_bridge/: README.md  background.js  disable_dialogs.js  manifest.json
benchmarks/: cache_probe.py  e2e_glm.py  prefix_audit.py
bonsai/: __init__.py  __main__.py  _proc.py  autonomous.py  config.py  env.py  log_setup.py  maintenance.py  runtime.py  scheduler.py  stats.py
bonsai/adapters/: __init__.py  _http.py  _openai_compat.py  claude.py  glm.py  minimax.py  openai.py  qwen.py
bonsai/channels/: __init__.py  chat_profiles.py  chat_runtime.py  registry.py  runners.py  runners_dingtalk.py  runners_feishu.py  runners_qq.py  runners_telegram.py  runners_wecom.py  supervisor.py  wechat_client.py
bonsai/cli/: __main__.py  distill.py  doctor.py  gc.py  setup_wizard.py
bonsai/core/: backend.py  budget.py  cache_monitor.py  dual_model.py  handler.py  loop.py  session.py  session_log.py  smart_format.py  types.py  wakeup.py
bonsai/frontends/: base.py  mcp_server.py  web.py
bonsai/frontends/web/: __init__.py  _common.py  routes_autonomous.py  routes_channels.py  routes_config.py  routes_doctor.py  routes_memory.py  routes_missions.py  routes_root.py  routes_scheduler.py  routes_sessions.py  routes_skills.py  routes_stats.py
bonsai/stores/: embed.py  evidence.py  memory_store.py  skill_store.py
bonsai/tools/: ask_user.py  code_run.py  code_search.py  desktop.py  file_read.py  file_write.py  git_ops.py  memory_search.py  pytest_run.py  schema_spec.py  skill_lookup.py  working_memory.py
bonsai/tools/browser/: __init__.py  ax_tree.py  bridge_server.py  bridge_session.py  cdp_client.py  dom_prune.py  element_pool.py  managed.py  session.py
bonsai/writer/: drawer_ingester.py  session_archiver.py  session_compactor.py  sop_distiller.py
docs/: USAGE.md
prompts/: system.txt
skills/L3_samples/: autonomous_mode.md  browser_workflow.md  desktop_automation.md  edit_files.md  fetch_http.md  git_commit.md  harness_workflow.md  install_python_deps.md  plan_before_big.md  search_codebase.md  shell_safety.md  verify_before_report.md
skills/L3_samples/harness_templates/: add_test_coverage.md  migrate_storage.md  refactor_module.md
tools/: schema.json
