[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bonsai"
version = "0.2.0"
description = "A constrained-but-growing personal agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "euroxanty"}]
keywords = ["agent", "llm", "memory"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27",
    "orjson>=3.10",
    "typer>=0.12",
    "rich>=13.7",
    "tomli>=2.0; python_version<'3.11'",
    "pydantic>=2.6",
    # Web UI (`bonsai serve`) is the recommended entry — keep in main deps.
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # QR scan登录 + 微信媒体 AES 收发 属于 web UI 的主流程,不走 extras。
    "qrcode>=7.4",
    "pycryptodome>=3.19",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
memory = [
    "sqlite-vec>=0.1.1",
    "sentence-transformers>=3.0",
]
desktop = [
    "pyautogui>=0.9.54",
    "opencv-python>=4.8",   # for find_image locateOnScreen fuzzy match
]
bridge = [
    "websockets>=12.0",     # WS server for assets/chrome_bridge/ extension
]

[project.scripts]
bonsai = "bonsai.cli.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["bonsai*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
# E701/E702: stylistic single-line blocks are fine in compact helper code.
# SIM102/SIM108/SIM118/SIM210: the suggested forms are not always clearer.
# SIM105: contextlib.suppress is more verbose than `try/except/pass` here.
# B904: "raise from" hurts readability in thin CLI wrappers.
ignore = ["E501", "E701", "E702", "SIM102", "SIM105", "SIM108", "SIM118", "SIM210", "B904"]

[tool.ruff.lint.per-file-ignores]
# typer uses `typer.Option(...)` in defaults; B008 is expected.
"bonsai/cli/__main__.py" = ["B008"]
"bonsai/cli/setup_wizard.py" = ["B008"]
"bonsai/cli/doctor.py" = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
